test/cases/compile_errors/comptime_slice-sentinel_is_out_of_bounds_terminated.zig
export fn foo_array() void {
    comptime {
        var target = [_:0]u8{ 'a', 'b', 'c', 'd' } ++ [_]u8{undefined} ** 10;
        const slice = target[0..15 :1];
        _ = slice;
    }
}
expor